--- a/_config.yml
+++ b/_config.yml
@@ -1,43 +1,93 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
-
 # Site settings
 title: 赵云鹏的博客
 SEOTitle: 赵云鹏的博客 | Zyp Blog
+#header-img: img/home-bg.jpg
 email: 807536782@qq.com
 description: "Cool blog"
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://silverbulletzyp.github.io." # the base hostname & protocol for your site
+keyword: ""
+url: "http://silverbulletzyp.github.io."             # your host, for absolute URL
+baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
 
 
 # SNS settings
 RSS: false
-weibo_username:     夜无眠yszd
-zhihu_username:     夜无眠
-github_username:    SilverBulletZyp
-twitter_username:   SilverBulletZyp
-facebook_username:  赵云鹏
+#weibo_username:     huxpro
+#zhihu_username:     huxpro
+#github_username:    huxpro
+##twitter_username:  huxpro
+#facebook_username:  huxpro
+
+
 
 # Build settings
-paginate: 10 
+highlighter: pygments
+permalink: pretty
+paginate: 10
+exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
+anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
+
+
 
 # Markdown settings
+# replace redcarpet to kramdown,
+# although redcarpet can auto highlight code, the lack of header-id make the catalog impossible, so I switch to kramdown
+# document: http://jekyllrb.com/docs/configuration/#kramdown
 markdown: kramdown
 kramdown:
-  input: GFM    
-  
-  
-  
+  input: GFM                            # use Github Flavored Markdown !important
+
+
+
+# Disqus settings
+#disqus_username: _your_disqus_short_name_
+
+# Duoshuo settings
+duoshuo_username: huxblog
+# Share component is depend on Comment so we can NOT use share only.
+duoshuo_share: true                     # set to false if you want to use Comment without Sharing
+
+
+
+
+#Analytics settings
+#Baidu Analytics
+#ba_track_id: 4cc1f2d8f3067386cc5cdb626a202900
+#Google Analytics
+#ga_track_id: 'UA-49627206-1'            # Format: UA-xxxxxx-xx
+#ga_domain: huangxuan.me
+
+
+
 # Sidebar settings
-sidebar: true  #添加侧边栏
-sidebar-about-description: "简单的描述一下你自己"
-sidebar-avatar: /img/avatar-hux.jpg     #你的大头贴，请使用绝对地址.
+sidebar: true                           # whether or not using Sidebar.
+sidebar-about-description: "试试看"
+sidebar-avatar: /img/avatar-hux.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+
+
 
 # Featured Tags
 featured-tags: true                     # whether or not using Feature-Tags
 featured-condition-size: 1              # A tag will be featured if the size of it is more than this condition value
+
+
+
+#Friends
+#friends: [
+#    {
+#        title: "Hux Blog",
+#        href: "http://huangxuan.me"
+#    },{
+#        title: "Foo",
+#        href: "#"
+#    },{
+#        title: "Bar",
+#        href: "#"
+#    },{
+#        title: "Example Friends",
+#        href: "#"
+#    },{
+#        title: "It helps SEO",
+#        href: "#"
+#    }
+#]
