--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ baseurl: ""                             # for example, '/blog' if your blog host
 
 # SNS settings
 RSS: false
-#weibo_username:     huxpro
+weibo_username:     2504032693
 #zhihu_username:     huxpro
 #github_username:    huxpro
 ##twitter_username:  huxpro
@@ -43,7 +43,7 @@ kramdown:
 #disqus_username: _your_disqus_short_name_
 
 # Duoshuo settings
-duoshuo_username: 8637010
+duoshuo_username: 夜无眠yszd
 # Share component is depend on Comment so we can NOT use share only.
 duoshuo_share: true                     # set to false if you want to use Comment without Sharing
 
