--- a/_config.yml
+++ b/_config.yml
@@ -13,11 +13,10 @@ baseurl: ""                             # for example, '/blog' if your blog host
 # SNS settings
 RSS: false
 weibo_username:     2504032693
-#zhihu_username:     huxpro
-#github_username:    huxpro
-##twitter_username:  huxpro
-#facebook_username:  huxpro
-
+zhihu_username:     ye-wu-mian-77
+github_username:    SilverBulletZyp
+twitter_username:   SilverBulletZyp
+facebook_username:  100010914184728
 
 
 # Build settings
