--- a/_config.yml
+++ b/_config.yml
@@ -42,9 +42,9 @@ kramdown:
 #disqus_username: disqus_bsbD6Hd8Ak
 #
 #Duoshuo settings
-#duoshuo_username: 8637010
+duoshuo_username: 8637010
 #Share component is depend on Comment so we can NOT use share only.
-#duoshuo_share: true                     # set to false if you want to use Comment without Sharing
+duoshuo_share: true                     # set to false if you want to use Comment without Sharing
 
 
 
