--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title: Your Blog
-SEOTitle: 你的博客 | Your Blog
+title: 赵云鹏的博客
+SEOTitle: 赵云鹏的博客-Zyp Blog
 header-img: img/home-bg.jpg
-email: huxpro@gmail.com
-description: ""
+email: 807536782@qq.com
+description: "Cool blog"
 keyword: ""
-url: "http://huangxuan.me"              # your host, for absolute URL
+url: "http://silverbulletzyp.github.io."               # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
 
