--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ kramdown:
 #disqus_username: _your_disqus_short_name_
 
 # Duoshuo settings
-duoshuo_username: huxblog
+duoshuo_username: 夜无眠yszd
 # Share component is depend on Comment so we can NOT use share only.
 duoshuo_share: false                     # set to false if you want to use Comment without Sharing
 
@@ -61,7 +61,7 @@ duoshuo_share: false                     # set to false if you want to use Comme
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "写写代码，做做设计，看看产品。世界那么大，多玩玩看看。"
+sidebar-about-description: "抬头望望天，月亮在笑，低头看看地，浪花在跳；这个世界，我们多渺小，只要努力，就会心比天高。"
 sidebar-avatar: /img/avatar-hux.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
@@ -73,21 +73,21 @@ featured-condition-size: 1              # A tag will be featured if the size of 
 
 
 # Friends
-friends: [
-    #{
-#        title: "Hux Blog",
-#        href: "http://huangxuan.me"
-#    },{
-#        title: "Foo",
-#        href: "#"
-#    },{
-#        title: "Bar",
-#        href: "#"
-#    },{
-#        title: "Example Friends",
-#        href: "#"
-#    },{
-#        title: "It helps SEO",
-#        href: "#"
-#    }
-]
+#friends: [
+#    {
+#       title: "Hux Blog",
+#       href: "http://huangxuan.me"
+#   },{
+#       title: "Foo",
+#       href: "#"
+#   },{
+#       title: "Bar",
+#       href: "#"
+#   },{
+#       title: "Example Friends",
+#       href: "#"
+#   },{
+#       title: "It helps SEO",
+#       href: "#"
+#   }
+#]
