--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ duoshuo_share: false                     # set to false if you want to use Comme
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "抬头望望天，月亮在笑，低头看看地，浪花在跳；这个世界，我们多渺小，只要努力，就会心比天高。"
-sidebar-avatar: /img/author-zyp.png      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/author-zyp.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
