--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: 赵云鹏的博客
 SEOTitle: 赵云鹏的博客-Zyp Blog
 header-img: img/home-bg.jpg
 email: 807536782@qq.com
-description: "Cool blog"
+description: ""
 keyword: ""
 url: "http://silverbulletzyp.github.io."               # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
