--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ RSS: false
 weibo_username:     2504032693
 zhihu_username:     ye-wu-mian-77
 github_username:    SilverBulletZyp
-twitter_username:   SilverBulletZyp
+#twitter_username:   SilverBulletZyp
 facebook_username:  100010914184728
 
 
