--- a/_config.yml
+++ b/_config.yml
@@ -75,8 +75,8 @@ featured-condition-size: 1              # A tag will be featured if the size of 
 # Friends
 friends: [
    {
-       title: "Hux Blog",
-       href: "http://huangxuan.me"
+       title: "Adding",
+       href:  "#"
    },{
        title: "Foo",
        href: "#"
