--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ RSS: false
 weibo_username:     2504032693
 zhihu_username:     ye-wu-mian-77
 github_username:    SilverBulletZyp
-#twitter_username:   SilverBulletZyp
+twitter_username:   SilverBulletZyp
 facebook_username:  100010914184728
 
 
@@ -43,26 +43,26 @@ kramdown:
 #disqus_username: _your_disqus_short_name_
 
 # Duoshuo settings
-duoshuo_username: huxblog
+duoshuo_username: 夜无眠yszd
 # Share component is depend on Comment so we can NOT use share only.
 duoshuo_share: false                     # set to false if you want to use Comment without Sharing
 
 
 
 
-# Analytics settings
-# Baidu Analytics
-ba_track_id: 4cc1f2d8f3067386cc5cdb626a202900
-# Google Analytics
-ga_track_id: 'UA-49627206-1'            # Format: UA-xxxxxx-xx
-ga_domain: huangxuan.me
+#Analytics settings
+#Baidu Analytics
+#ba_track_id: 4cc1f2d8f3067386cc5cdb626a202900
+#Google Analytics
+#ga_track_id: 'UA-49627206-1'            # Format: UA-xxxxxx-xx
+#ga_domain: huangxuan.me
 
 
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "写写代码，做做设计，看看产品。世界那么大，多玩玩看看。"
-sidebar-avatar: /img/avatar-hux.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-about-description: "抬头望望天，月亮在笑，低头看看地，浪花在跳；这个世界，我们多渺小，只要努力，就会心比天高。"
+sidebar-avatar: /img/author-zyp.png      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
