--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: 赵云鹏的博客
 SEOTitle: 赵云鹏的博客-Zyp Blog
-header-img: img/home-bg.jpg
+header-img: img/home-bg-o.jpg
 email: 807536782@qq.com
 description: ""
 keyword: ""
@@ -68,7 +68,7 @@ sidebar-avatar: /img/author-zyp.png      # use absolute URL, seeing it's used in
 
 # Featured Tags
 featured-tags: true                     # whether or not using Feature-Tags
-featured-condition-size: 1              # A tag will be featured if the size of it is more than this condition value
+featured-condition-size: 0              # A tag will be featured if the size of it is more than this condition value
 
 
 
