--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: 赵云鹏的博客
-SEOTitle: 赵云鹏的博客-Zyp Blog
+SEOTitle: 赵云鹏的博客|Zyp Blog
 header-img: img/home-bg-o.jpg
 email: 807536782@qq.com
 description: ""
