--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: I'm Zyp # ex. I m Chuan
+title: I'm Zyp. Welcome to my blog. # ex. I m Chuan
 name:  SilverBulletZyp # ex. DONGChuan
 email: 807536782@qq.com
 # location: Shanghai, China  # ex. Nice, France
@@ -21,7 +21,7 @@ repository: SilverBulletZyp/SilverBulletZyp.github.io # ex. DONGChuan/DONGChuan.
 # For local test, please use http://localhost:4000
 # For production, use your github page url. ex. http://dongchuan.github.io
 # url: http://localhost:4000
-url: http://silverbulletzyp.github.io.
+url: http://silverbulletzyp.github.io/
 
 ## Gem
 gems:
