--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: I'm Zyp. Welcome to my blog. # ex. I m Chuan
-name:  SilverBulletZyp # ex. DONGChuan
+name:  Zyp # ex. DONGChuan
 email: 807536782@qq.com
 # location: Shanghai, China  # ex. Nice, France
 # company: MyCompany
